updating README with new image

--- a/README.Rmd
+++ b/README.Rmd
@@ -11,6 +11,7 @@ In addition to my [blog](https://jlaw.netlify.app), I occasionally try to make r
 
 ## 2021/08/27 - WWF/E Triple Crown Champions
 
+![](20210822_WWE_Triple_Crown_Champions/wwe_triple_crown_infographic_files/figure-html/plot-1.png)
 
 ## 2021/05/16 - Comparing 1998 and 2007 AFI Top 100 Lists
 
