--- a/README.Rmd
+++ b/README.Rmd
@@ -9,6 +9,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 In addition to my [blog](https://jlaw.netlify.app), I occasionally try to make random data visualizations for this that happen to pop into my mind.  Inspired by [z3tt's TidyTuesday repo](https://github.com/Z3tt/TidyTuesday).  I decided to make a repo for myself.
 
+## 2021/12/29 - The Chaos of College Football Realignment
+![](20211229_CollegeFootballRealignment/conference_realignment.png)
+
 ## 2021/09/06 - Which MTV The Challenge Cast Has Appeared Most Often and When
 ![](20210906_Challenge_Seasons/challenge_season_infographic_files/figure-html/viz-1.png)
 
