Adding in Stanley Cup Droughts

--- a/README.Rmd
+++ b/README.Rmd
@@ -9,6 +9,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 In addition to my [blog](https://jlaw.netlify.app), I occasionally try to make random data visualizations for this that happen to pop into my mind.  Inspired by [z3tt's TidyTuesday repo](https://github.com/Z3tt/TidyTuesday).  I decided to make a repo for myself.
 
+## 2023/11/05 - Longest Stanley Cup Droughts (1917-2023)
+![](20231105_StanleyCupDrought/StanleyCupDrought.png)
+
 ## 2023/10/19 - Movies For The People
 ![](20231019_MoviesForThePeople/most_audience.png)
 
