--- a/README.Rmd
+++ b/README.Rmd
@@ -9,6 +9,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 In addition to my [blog](https://jlaw.netlify.app), I occasionally try to make random data visualizations for this that happen to pop into my mind.  Inspired by [z3tt's TidyTuesday repo](https://github.com/Z3tt/TidyTuesday).  I decided to make a repo for myself.
 
+## 2024/06/21 - How Dirty Was The Challenge Dirty 30?
+![](20240610_Dirty30/dirty30.png)
+
 ## 2024/06/09 - Baby JLaw's Sleep Patterns
 ![](20240609_BabySleep/baby_sleep.png)
 
